--- a/CSS/06_Grid_masterclass/gridMasterClass.html
+++ b/CSS/06_Grid_masterclass/gridMasterClass.html
@@ -25,7 +25,7 @@
       .grid-container {
         display: grid;
         gap: 10px;
-        background-color: #ddd;
+        background-color: #d5b1b1;
         padding: 10px;
         margin-bottom: 10px;
       }
